assets/css/style.css
:root {
  --main-color: #dddddd;
}

@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap");

* {
  font-family: "Open Sans", sans-serif;
}

h1 {
  font-size: 25px;
  font-weight: 600;
}
h2 {
  font-size: 20px;
  font-weight: 600;
}
h3 {
  font-size: 18px;
  font-weight: 600;
}
h4 {
  font-size: 16px;
  font-weight: 600;
}
.right-padding {
  padding-right: 20px;
}
span {
  font-weight: bold;
}

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 10px;
}

.margin-top-bottom {
  margin: 10px 0px;
}
.margin-top {
  margin-top: 20px;
}

.margin-bottom {
  margin-bottom: 20px;
}

.margin-right-left {
  margin: 0 10px;
}

.margin-right {
  margin-right: 10px;
}

.margin-left {
  margin-left: 10px;
}

.container-fluid {
  margin-left: 13%;
  margin-right: 13%;
}

.logo {
  width: 110px;
}

.btn-hover {
  padding: 5px;
  border-radius: 50px;
}

.btn-hover:hover {
  background-color: rgba(237, 237, 237, 0.904);
  cursor: pointer;
}

.big-picture {
  width: 50%;
  /* height: 100%; */
}
.big-picture img {
  height: 100%;
  object-fit: fill;
}
.show-all-btn {
  padding: 12px;
  font-size: 16px;
  background-color: white;
  border-radius: 10px;
}
.show-all-btn:hover {
  background-color: rgba(237, 237, 237, 0.904);
  cursor: pointer;
}

.cross-text {
  text-decoration: line-through;
}

nav ul {
  display: flex;
  /* justify-content: space-between; */
  align-items: center;
  list-style: none;
}

nav ul li a {
  display: flex;
  text-decoration: none;
  color: black;
  /* padding: 10px; */
  border-radius: 5px;
  transition: all 0.3s ease;
  font-size: 16px;
  font-weight: 500;
}

.search-button {
  display: flex;
  align-items: center;
  padding: 8px;
  border-radius: 30px;
  justify-content: space-between;
  border: 1px solid var(--main-color);
  margin-left: 160px;
  width: 300px;
  background-color: white;
  box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
  transition: all 1s;
}

.search-button:hover {
  box-shadow: 0 5px 5px -5px rgba(0, 0, 0, 0.5);
}

.float-button {
  position: absolute;
  bottom: 30px;
  right: 30px;
  display: flex;
  align-items: center;
  gap: 10px;
  font-size: 16px;
}

.search-icon {
  width: 30px;
  background-color: #ff385c;
  padding: 5px;
  border-radius: 50%;
}

.search-icon img {
  filter: brightness(0) invert(1);
}

.search-button span {
  display: flex;
  justify-content: start;
  font-weight: 540;
  margin-left: 20px;
}

.menu-button {
  display: flex;
  align-items: center;
  border: 1px solid var(--main-color);
  border-radius: 40px;
  padding: 6px;
  transition: all 0.8s;
}

.menu-button:hover {
  box-shadow: 0 5px 5px -5px rgba(0, 0, 0, 0.5);
}

.menu-button img {
  margin: 0px 5px;
}

.divider {
  border-color: var(--main-color);
  border-width: 0.1px;
}

.flexSeparator {
  display: flex;
  justify-content: space-between;
  align-self: center;
}

.icon {
  width: 15px;
}
.icon2 {
  width: 30px;
  height: 30px;
  object-fit: contain;
  display: flex;
  justify-content: center;
  align-items: center;
}

.roomSection {
  margin-bottom: 20px;
}

.services {
  margin: 40px 0;
}

.pictures {
  border-radius: 10px;
  overflow: hidden;
}

.flex {
  display: flex;
  gap: 10px;
}

.light-text {
  font-weight: normal;
  color: gray;
}
.reserve-btn {
  width: 100%;
  padding: 13px;
  border: none;
  background-color: #ff385c;
  color: white;
  font-size: 18px;
}
.reserve-btn:hover {
  background-color: #ff385dce;
}

.text-center {
  text-align: center;
}

.align {
  align-items: center;
}

.padding {
  padding: 10px;
}

.grid-container {
  display: grid;
  grid-template-columns: auto auto;
  grid-gap: 10px;
  width: 50%;
}

.grid-container div img {
  height: 100%;
}

.frontIcon {
  width: 30px;
  height: 30px;
}

.info {
  margin: 60px 0;
}

.margin {
  margin: 50px 0px;
}

.bedInfo {
  padding: 30px;
  border: 2px solid black;
  width: 30%;
  border-radius: 10px;
  display: flex;
  flex-direction: column;
  gap: 10px;
  border-color: var(--main-color);
}
.Amenities {
  margin-top: 40px;
}

.sleepingArrangement {
  margin-top: 40px;
}

.flex-column {
  flex-direction: column;
}

.sleeping-room-img {
  width: 400px;
  height: 250px;
  border-radius: 30px;
  overflow: hidden;
}

.wrap-horizontal {
  display: flex;
  flex-direction: column;
  gap: 20px;
  height: 200px;
  flex-wrap: wrap;
}

.showAllBtn {
  border-radius: 10px;
  /* background-color: white; */
}

.right__top-details {
  display: flex;
  gap: 30%;
}

.img-hover {
  position: relative;
  display: inline-block;
}

.img-hover::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.3);
  opacity: 0;
  transition: opacity 0.3s ease;
}

.img-hover:hover::before {
  opacity: 1;
}

.img-hover:hover {
  cursor: pointer;
}

.right {
  position: relative;
  width: 33%;
  top: 0px;
}

.grid-CheckInOut {
  display: grid;
  grid-template-columns: auto auto;
  margin: 20px 0px;
}

.grid-CheckInOut > div:nth-child(3) {
  grid-column-start: 1;
  grid-column-end: span 2;
}
.left {
  width: 60%;
  margin-top: 40px;
}

.grid1 {
  padding: 10px;
  border: 2px solid black;
  border-color: var(--main-color);
  border-top-left-radius: 10px;
}

.grid2 {
  padding: 10px;
  border: 2px solid black;
  border-color: var(--main-color);
  border-top-right-radius: 10px;
  border-left: none;
}

.grid3 {
  padding: 10px;
  border: 2px solid black;
  border-color: var(--main-color);
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
  border-top: none;
}

.sticky {
  position: sticky;
  top: 40px;
}

.stickyForm {
  padding: 30px;
  border: 2px solid black;
  border-radius: 10px;
  border-color: var(--main-color);
  margin-top: 40px;
}

.reviews {
  margin-top: 40px;
}
.right__sticky-note {
  display: flex;
  padding: 20px;
  border: 2px solid var(--main-color);
  margin-top: 20px;
  border-radius: 10px;
}
.indicator {
  width: 120px;
  height: 5px;
  background-color: black;
  border-radius: 10px;
}

.grid-container2 {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 30px;
}

.location {
  display: flex;
  flex-direction: column;
}
.locationImg {
  height: 500px;
  overflow: hidden;
  object-fit: cover;
}

.personImg {
  width: 60px;
  height: 60px;
  border-radius: 50%;
  overflow: hidden;
}

.pointerDivider {
  position: relative;
  bottom: 5px;
}

.ThingToKnowSection {
  display: flex;
  flex-direction: column;
}

.grid-container3 {
  display: grid;
  grid-template-columns: auto auto auto;
  grid-gap: 100px;
}

.flexColumnGaps {
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.copyrightList {
  display: flex;
  gap: 10px;
  font-size: 18px;
}

.review__gap--more {
  grid-column-gap: 120px;
}

